# neumodvb

./: .gitignore  CMakeLists.txt  Changes.txt  README.cmake  README.md  README.pyinstaller  build-rpms  example_python_spec.txt  neumo.clang-format  neumodvb.desktop  random_info.txt
gui/: .gdbinit  CMakeLists.txt  README.txt  _neumo_dialogs_431482732.py  copyright.txt  frontends.py  hide-warnings  kos.py  neumo_dialogs.wxg  neumodbstats.py  neumodvb.py  neumodvb.wxg  neumoupgrade.py  positioner_dialog.wxg  preferences_dialog.wxg  prettyprint.py  setup.py.in  signalhistory_dialog.wxg  spectrum_dialog.wxg  stderr  test.py  test.wxg
gui/neumodvb/: __init__.py  autorec_dialog.py  autoreclist.py  channelno_dialog.py  chepginfo.py  chepglist.py  chglist.py  chglist_combo.py  chgmlist.py  config.py  constellationplot.py  dishlist.py  draw_mux.py  dvbc_muxlist.py  dvbs_muxlist.py  dvbt_muxlist.py  epg_content_codes.py  filter_dialog.py  frontendlist.py  init_db.py  language_dialog.py  live.py  livescreen.py  lnb_dialog.py  lnbconnectionlist.py  lnblist.py  lnblist_combo.py  lnbnetwork_dialog.py  lnbnetworklist.py  minifloatspin.py  minispinbutton.py  minispinctrl.py  muxinfo.py  muxlist_combo.py  neumo_dialogs.py  neumo_dialogs_gui.py  neumodbutils.py  neumolist.py  neumomenu.py  neumoplot.py  (+32 more)
gui/neumodvb/mini/: minifloatspin.py  minispinctrl.py
gui/neumodvb/upgrade/: major_upgrade_2_3.py  upgrade.py
neumolmdb/: CMakeLists.txt  mdb.c  mdb_copy.c  mdb_drop.c  mdb_dump.c  mdb_load.c  mdb_stat.c  midl.h  mtest.c  mtest2.c  mtest3.c  mtest4.c  mtest5.c  mtest6.c
neumowxsvg/: .cproject  .gitignore  .project  AUTHORS  ChangeLog  INSTALL  Makefile.am  README  README.dt  TODO  autogen.sh  configure.ac  libwxsvg.pc.in
neumowxsvg/include/: Makefile.am
neumowxsvg/include/wxSVG/: SVGCanvas.h  SVGCanvasItem.h  SVGDocument.h  SVGElement.h  SVGStringList.h  mediadec_ffmpeg.h
neumowxsvg/m4/: .gitignore  wxwin.m4
neumowxsvg/resources/: .gitignore  pause.png.h  png2c.py  start.png.h  stop.png.h  svgview.rc  wxsvg.png.h
neumowxsvg/scripts/: conf.py  cpp.py  cppHeader.py  cppImpl.py  enum_map.py  genAnimated.py  genCSS.py  genFile.py  genGetAttribute.py  genGetAttributes.py  genHasAttribute.py  genList.py  genSetAttribute.py  genSvgElement.py  generate.py  idl.py  interfaces.py  mapDtdIdl.py  parse_attr.py  parse_dtd.py  parse_idl.py
neumowxsvg/share/: SVG11CSSpropidx.xhtml  svg.dtd  svg.idl
neumowxsvg/src/: .gitignore  CSSStyleDeclaration.cpp  CSSValue.cpp  Makefile.am  SVGCanvas.cpp  SVGCanvasItem.cpp  SVGColor.cpp  SVGDocument.cpp  SVGLength.cpp  SVGTransform.cpp  SVGTransformList.cpp  SVGTransformable.cpp  SVGUseElement.cpp  mediadec_ffmpeg.cpp
neumowxsvg/src/cairo/: Makefile.am  SVGCanvasCairo.cpp  SVGCanvasCairo.h  SVGCanvasPathCairo.cpp  SVGCanvasTextCairo.cpp
neumowxsvg/src/skia/: SVGCanvasSkia.cpp  SVGCanvasSkia.h
neumowxsvg/src/svgxml/: Makefile.am
neumowxsvg/svgview/: .gitignore  Makefile.am  svgview.cpp  svgview.dev  svgview.h
src/: .gdb  .gitignore  CMakeLists.txt  README.external_software  copyright.txt
src/neumodb/: .pdbrc  CMakeLists.txt  README.md  cursors.h  db_keys_helper.h  db_update.h  dbdesc.cc  dbdesc.h  decode.h  deserialize.h  deserialize_pybind.cc  encode.h  generators.py  lmdb++.h  metadata.h  neumodb.cc  neumodb.h  neumodb.py  neumodb_pybind.cc  neumodb_upgrade.h  neumodb_upgrade_impl.h  neumodbstats.py  neumoupgrade.cc  renumber_services.py  screen.h  screen_impl.h  screen_monitor.h  screen_pybind.h  serialize.h  test_find_mux.py  test_select_reference_mux.py  testchdb.py  testdeser.py  testencode.cc  testepgdb.py  testfe.py  testlnb.py  testlocktime.py  testmpm.py  testneumodb.py  (+13 more)
src/neumodb/chdb/: CMakeLists.txt  browse_history.cc  chdb_clean.cc  chdb_extra.cc  chdb_extra.h  chdb_pybind.cc  chdb_upgrade.cc  chdb_vector_pybind.cc  chdb_vector_pybind.h  data_types.h  dbdefs.py  dbdefsextra.py  fe_find.cc  lang_codes.cc  minsnr.cc  mux_find.cc
src/neumodb/devdb/: CMakeLists.txt  data_types.h  dbdefs.py  devdb_extra.cc  devdb_extra.h  devdb_private.h  devdb_pybind.cc  devdb_upgrade.cc  devdb_vector_pybind.cc  devdb_vector_pybind.h  fe_find.cc  fe_subscribe.cc  tune_options.h
src/neumodb/epgdb/: CMakeLists.txt  data_types.h  dbdefs.py  epgdb_extra.cc  epgdb_extra.h  epgdb_pybind.cc  epgdb_upgrade.cc
src/neumodb/recdb/: CMakeLists.txt  dbdefs.py  rec_browse_history.cc  recdb_extra.cc  recdb_extra.h  recdb_pybind.cc  recdb_upgrade.cc
src/neumodb/schema/: CMakeLists.txt  data_types.h  dbdefs.py  schema_extra.h  schemadb.cc  schemadb_pybind.cc
src/neumodb/statdb/: CMakeLists.txt  data_types.h  dbdefs.py  statdb_extra.h  (+5 more)
src/pybind11/: cmake_install.cmake
src/receiver/: CLI  CMakeLists.txt  README.md  active_adapter.cc  active_adapter.h  active_playback.cc  active_playback.h  active_service.cc  active_service.h  active_si_stream.cc  active_si_stream.h  active_stream.cc  active_stream.h  adapter.h  capmt.cc  commands.cc  devmanager.cc  devmanager.h  dvb_strings.cc  dvbapi.h  dvbcsa.cc  dvbcsa.h  fe_monitor.cc  filemapper.cc  filemapper.h  findtps.py  findtpsV1.py  frontend.cc  live_mpm.cc  logger_pybind.cc  mpm.h  neumo-blindscan.cc  neumo-tune.cc  neumo.h  neumofrontend.h  options.cc  options.h  options_pybind.cc  playback_mpm.cc  plotiq.py  (+41 more)
src/stackstring/: CMakeLists.txt  neumotime.cc  neumotime.h  ssaccu.h  stackstring.cc  stackstring.h  stackstring_header.h  stackstring_impl.h  stackstring_pybind.h  testss.cc
src/util/: CMakeLists.txt  access.h  dtassert.h  dtutil.h  function_view.h  identification.cc  identification.h  logger.cc  logger.h  neumovariant.h  template_util.h  time_util.h  util.cc  util.h  version.cmake
src/viewer/: .gitignore  CMakeLists.txt  README.gdb  neumoglcanvas.h  neumompv.cc  neumompv.h  neumompv_private.h  neumompv_pybind.cc  neumoradiobg.cc  neumosvg.cc  neumosvg.h  perf_command.txt  wxpy_api.h
xformat/: .gitignore  .travis.yml  CMakeLists.txt
xformat/src/: format.cc  ostream_formatter.cc
xformat/tests/: fmttest.h  streamtest.h  test_cfmt.cc  test_cprintf.cc  test_fmt.cc  test_printf.cc  test_simple.cc
(+117 files in other folders)
